; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_colorspace.c_get_transfer_characteristics.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_colorspace.c_get_transfer_characteristics.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TransferCharacteristics = type { i32 }

@AVCOL_TRC_NB = common dso_local global i32 0, align 4
@transfer_characteristics = common dso_local global %struct.TransferCharacteristics* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TransferCharacteristics* (i32)* @get_transfer_characteristics to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TransferCharacteristics* @get_transfer_characteristics(i32 %0) #0 {
  %2 = alloca %struct.TransferCharacteristics*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TransferCharacteristics*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @AVCOL_TRC_NB, align 4
  %7 = icmp uge i32 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.TransferCharacteristics* null, %struct.TransferCharacteristics** %2, align 8
  br label %21

9:                                                ; preds = %1
  %10 = load %struct.TransferCharacteristics*, %struct.TransferCharacteristics** @transfer_characteristics, align 8
  %11 = load i32, i32* %3, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TransferCharacteristics, %struct.TransferCharacteristics* %10, i64 %12
  store %struct.TransferCharacteristics* %13, %struct.TransferCharacteristics** %4, align 8
  %14 = load %struct.TransferCharacteristics*, %struct.TransferCharacteristics** %4, align 8
  %15 = getelementptr inbounds %struct.TransferCharacteristics, %struct.TransferCharacteristics* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %9
  store %struct.TransferCharacteristics* null, %struct.TransferCharacteristics** %2, align 8
  br label %21

19:                                               ; preds = %9
  %20 = load %struct.TransferCharacteristics*, %struct.TransferCharacteristics** %4, align 8
  store %struct.TransferCharacteristics* %20, %struct.TransferCharacteristics** %2, align 8
  br label %21

21:                                               ; preds = %19, %18, %8
  %22 = load %struct.TransferCharacteristics*, %struct.TransferCharacteristics** %2, align 8
  ret %struct.TransferCharacteristics* %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
